src/app/components/swapped-top-opportunities/static-topOpportunities.component.scss
$nudge: 3rem;

.main-swap-card {
  margin-left: $nudge;

  ::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }
  
  ::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background: rgba(255, 255, 255, 0.3);
  }

  .swap-card {
    backdrop-filter: blur(17.5px);
    color: #CECECE;
    transition: margin-right 0.3s ease, margin-left 0.3s ease, z-index 0s;

    .one,
    &.front {
      z-index: 2;
      margin-right: $nudge * 2;
    }

    .two,
    &.back {
      z-index: 1;
      margin-right: 0;
    }
  }
}

.swap-card.one {
  background: linear-gradient(180deg, #0047BA 0%, #002054 100%);
}

.swap-card.two {
  background: rgba(77, 77, 77, 0.10);
  border: 1px solid rgba(229, 229, 229, 0.5);
}

